--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
 </head>
 
 <body>
+    <!-- Header Section Start -->
     <header>
-
+        <nav>
+            <div class="nav-left">
+                <img src="./images/Frame.png" alt="">
+                <h3>Gamer Zone</h3>
+            </div>
+            <div class="nav-right">
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Developers</a></li>
+                </ul>
+                <div class="follow-box">
+                    <p>Follow Us On</p>
+                    
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
 
