--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="https://kit.fontawesome.com/16102f6334.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -27,6 +28,8 @@
                 </ul>
                 <div class="follow-box">
                     <p>Follow Us On</p>
+                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                    <a href=""><i class="fa-brands fa-tiktok"></i></a>
                     
                 </div>
             </div>
