--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="nav-left">
                 <img src="./images/Frame.png" alt="">
-                <h3>Gamer Zone</h3>
+                <h3><span class="pink">G</span>amer</h3>
             </div>
             <div class="nav-right">
                 <ul>
