banner section created

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <!-- Header Section Start -->
     <header>
+        <!-- NavBar Start -->
         <nav>
             <div class="nav-left">
                 <img src="./images/Frame.png" alt="">
@@ -34,9 +35,26 @@
                 </div>
             </div>
         </nav>
+        <!-- NavBar End -->
     </header>
+    <!-- Header Seciton End -->
+ 
     <main>
+    <!-- Banner Secion Start -->
+    <section class="banner-section">
+        <div class="banner-content">
+            <h3>Play Like The</h3>
+            <h2>G.O.A.T.</h2>
+            <ul class="banner-items">
+                <li><i class="fa-regular fa-circle-play"></i><p>1-Click instant play</p></li>
+                <li><i class="fa-solid fa-download"></i><p>No Download</p></li>
+                <li><i class="fa-solid fa-user-group"></i><p>1000s of supported online games</p></li>
+            </ul>
+        </div>
+        <div class="banner-images">
 
+        </div>
+    </section>
     </main>
     <footer>
 
