banner section updated

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
                 <li><i class="fa-solid fa-download"></i><p>No Download</p></li>
                 <li><i class="fa-solid fa-user-group"></i><p>1000s of supported online games</p></li>
             </ul>
+            <button class="primary-btn">Sign In</button>
+            <button class="primary-btn">Go Rogue</button>
         </div>
         <div class="banner-images">
-
+            <img src="./images/Group 18.png" alt="">
         </div>
     </section>
     </main>
