--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
     <main>
     <!-- Banner Secion Start -->
     <section class="banner-section">
-            <div class="banner-info">
-                <h3>Play Like The</h3>
-                <h2>G.O.A.T.</h2>
-                <ul class="banner-items">
-                    <li><i class="fa-regular fa-circle-play"></i><p>1-Click instant play</p></li>
-                    <li><i class="fa-solid fa-download"></i><p>No Download</p></li>
-                    <li><i class="fa-solid fa-user-group"></i><p>1000s of supported online games</p></li>
-                </ul>
-                <button class="primary-btn btn-one">Sign In</button>
-                <button class="primary-btn btn-two">Go Rogue</button>
+            <div class="banner-content">
+                <div class="banner-info">
+                    <h3>Play Like The</h3>
+                    <h2>G.O.A.T.</h2>
+                    <ul class="banner-items">
+                        <li><i class="fa-regular fa-circle-play"></i><p>1-Click instant play</p></li>
+                        <li><i class="fa-solid fa-download"></i><p>No Download</p></li>
+                        <li><i class="fa-solid fa-user-group"></i><p>1000s of supported online games</p></li>
+                    </ul>
+                    <button class="primary-btn btn-one">Sign In</button>
+                    <button class="primary-btn btn-two">Go Rogue</button>
+                </div>
             </div>
             <div class="banner-image">
                 <img src="./images/Group 18.png" alt="">
