--- a/index.html
+++ b/index.html
@@ -60,6 +60,34 @@
             </div>
  
     </section>
+    <!-- Banner Section End -->
+
+    <!-- Gamers Section
+    <seciton class="gamers-section">
+        <div class="gamers-image">
+
+        </div>
+        <div class="gamers-content">
+            <h3>We are gamer</h3>
+            <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+            <button class="primary-btn">know more</button>
+        </div>
+    </seciton> -->
+
+    <!-- Game-Video Section Start-->
+
+    <section class="game-video-section">
+        <div class="section-title">
+            <h3>Online Games Funny Videos</h3>
+            <div class="seciton-description">A Collection of Hilarious Videos to Brighten Your Day</div>
+        </div>
+        <div class="card">
+            <img src="./images/Rectangle 4.png" alt="">
+            <img src="./images/Rectangle 5.png" alt="">
+            <img src="./images/Rectangle 7.png" alt="">
+            <img src="./images/Rectangle 6.png" alt="">
+        </div>
+    </section>
     </main>
     <footer>
 
