game video section updated

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <!-- Game-Video Section Start-->
 
     <section class="game-video-section">
-        <div class="section-title">
-            <h3>Online Games Funny Videos</h3>
-            <div class="seciton-description">A Collection of Hilarious Videos to Brighten Your Day</div>
+        <div class="game-video-container">
+            <h3 class="section-title">Online Games <span class="linear-text">Funny Videos</span></h3>
+            <p class="section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
         </div>
         <div class="card">
             <img src="./images/Rectangle 4.png" alt="">
