--- a/index.html
+++ b/index.html
@@ -81,11 +81,23 @@
             <h3 class="section-title">Online Games <span class="linear-text">Funny Videos</span></h3>
             <p class="section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
         </div>
-        <div class="card">
-            <img src="./images/Rectangle 4.png" alt="">
+        <div class="card-box">
+            <div class="card">
+                <img src="./images/Rectangle 4.png" alt="">
+                <p class="card-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+           <div class="card">
             <img src="./images/Rectangle 5.png" alt="">
-            <img src="./images/Rectangle 7.png" alt="">
-            <img src="./images/Rectangle 6.png" alt="">
+            <p class="card-caption">Did you score? #unblockedgames #school</p>
+           </div>
+            <div class="card">
+                <img src="./images/Rectangle 7.png" alt="">
+                <p class="card-caption">Breaking game records like OG</p>
+            </div>
+            <div class="card">
+                <img src="./images/Rectangle 6.png" alt="">
+                <p class="card-caption">Busted gaming on school laptop, but you are still lit.</p>
+            </div>
         </div>
     </section>
     </main>
