banner-section responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header Section Start -->
     <header>
         <!-- NavBar Start -->
-        <nav>
+        <nav class="">
             <div class="nav-left">
                 <img src="./images/Frame.png" alt="">
                 <h3><span class="pink">G</span>amer</h3>
@@ -31,38 +31,45 @@
                     <p>Follow Us On</p>
                     <a href=""><i class="fa-brands fa-youtube"></i></a>
                     <a href=""><i class="fa-brands fa-tiktok"></i></a>
-                    
+
                 </div>
             </div>
         </nav>
         <!-- NavBar End -->
     </header>
     <!-- Header Seciton End -->
- 
+
     <main>
-    <!-- Banner Secion Start -->
-    <section class="banner-section">
+        <!-- Banner Secion Start -->
+        <section class="banner-section">
             <div class="banner-content">
                 <div class="banner-info">
                     <h3>Play Like The</h3>
                     <h2>G.O.A.T.</h2>
                     <ul class="banner-items">
-                        <li><i class="fa-regular fa-circle-play"></i><p>1-Click instant play</p></li>
-                        <li><i class="fa-solid fa-download"></i><p>No Download</p></li>
-                        <li><i class="fa-solid fa-user-group"></i><p>1000s of supported online games</p></li>
+                        <li><i class="fa-regular fa-circle-play"></i>
+                            <p>1-Click instant play</p>
+                        </li>
+                        <li><i class="fa-solid fa-download"></i>
+                            <p>No Download</p>
+                        </li>
+                        <li><i class="fa-solid fa-user-group"></i>
+                            <p>1000s of supported online games</p>
+                        </li>
                     </ul>
-                    <button class="primary-btn btn-one">Sign In</button>
-                    <button class="primary-btn btn-two">Go Rogue</button>
+                    <a class="primary-btn btn-one" href="">Sign In</a>
+                    <a class="primary-btn btn-two" href="">Go Rogue</a>
+                </div>
+    
+                <div class="banner-image">
+                    <img src="./images/Group 18.png" alt="">
                 </div>
             </div>
-            <div class="banner-image">
-                <img src="./images/Group 18.png" alt="">
-            </div>
- 
-    </section>
-    <!-- Banner Section End -->
 
-    <!-- Gamers Section
+        </section>
+        <!-- Banner Section End -->
+
+        <!-- Gamers Section
     <seciton class="gamers-section">
         <div class="gamers-image">
 
@@ -74,9 +81,9 @@
         </div>
     </seciton> -->
 
-    <!-- Game-Video Section Start-->
+        <!-- Game-Video Section Start-->
 
-    <section class="game-video-section">
+        <!-- <section class="game-video-section">
         <div class="game-video-container">
             <h3 class="section-title">Online Games <span class="linear-text">Funny Videos</span></h3>
             <p class="section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
@@ -99,7 +106,7 @@
                 <p class="card-caption">Busted gaming on school laptop, but you are still lit.</p>
             </div>
         </div>
-    </section>
+    </section> -->
     </main>
     <footer>
 
