--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header Section Start -->
     <header>
         <!-- NavBar Start -->
-        <nav class="">
+        <nav class="hide">
             <div class="nav-left">
                 <img src="./images/Frame.png" alt="">
                 <h3><span class="pink">G</span>amer</h3>
@@ -41,7 +41,7 @@
 
     <main>
         <!-- Banner Secion Start -->
-        <section class="banner-section">
+        <section class="banner-section hide">
             <div class="banner-content">
                 <div class="banner-info">
                     <h3>Play Like The</h3>
@@ -83,7 +83,7 @@
 
         <!-- Game-Video Section Start-->
 
-        <!-- <section class="game-video-section">
+        <section class="game-video-section">
         <div class="game-video-container">
             <h3 class="section-title">Online Games <span class="linear-text">Funny Videos</span></h3>
             <p class="section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
@@ -106,7 +106,7 @@
                 <p class="card-caption">Busted gaming on school laptop, but you are still lit.</p>
             </div>
         </div>
-    </section> -->
+    </section>
     </main>
     <footer>
 
