feature section created

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header Section Start -->
     <header>
         <!-- NavBar Start -->
-        <nav class="hide">
+        <nav>
             <div class="nav-left">
                 <img src="./images/Frame.png" alt="">
                 <h3><span class="pink">G</span>amer</h3>
@@ -41,7 +41,7 @@
 
     <main>
         <!-- Banner Secion Start -->
-        <section class="banner-section hide">
+        <section class="banner-section">
             <div class="banner-content">
                 <div class="banner-info">
                     <h3>Play Like The</h3>
@@ -107,6 +107,22 @@
             </div>
         </div>
     </section>
+    <!-- Feature Section -->
+    <section class="feature-section">
+        <div class="feature-content">
+            <h3 class="section-title">Play Instantly,
+                No Downloads
+                No Installs.</h3>
+            <p class="section-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+        </div>
+        <div class="featured-game">
+            <img src="./images/Rectangle 55.png" alt="">
+            <div class="img-card">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
+
     </main>
     <footer>
 
