--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a class="primary-btn btn-one" href="">Sign In</a>
                     <a class="primary-btn btn-two" href="">Go Rogue</a>
                 </div>
-    
+
                 <div class="banner-image">
                     <img src="./images/Group 18.png" alt="">
                 </div>
@@ -84,44 +84,43 @@
         <!-- Game-Video Section Start-->
 
         <section class="game-video-section">
-        <div class="game-video-container">
-            <h3 class="section-title">Online Games <span class="linear-text">Funny Videos</span></h3>
-            <p class="section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
-        </div>
-        <div class="card-box">
-            <div class="card">
-                <img src="./images/Rectangle 4.png" alt="">
-                <p class="card-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+            <div class="game-video-container">
+                <h3 class="section-title">Online Games <span class="linear-text">Funny Videos</span></h3>
+                <p class="section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
-           <div class="card">
-            <img src="./images/Rectangle 5.png" alt="">
-            <p class="card-caption">Did you score? #unblockedgames #school</p>
-           </div>
-            <div class="card">
-                <img src="./images/Rectangle 7.png" alt="">
-                <p class="card-caption">Breaking game records like OG</p>
+            <div class="card-box">
+                <div class="card">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <p class="card-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <p class="card-caption">Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <p class="card-caption">Breaking game records like OG</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <p class="card-caption">Busted gaming on school laptop, but you are still lit.</p>
+                </div>
             </div>
-            <div class="card">
-                <img src="./images/Rectangle 6.png" alt="">
-                <p class="card-caption">Busted gaming on school laptop, but you are still lit.</p>
+        </section>
+        <!-- Feature Section -->
+        <section class="feature-section section-width">
+            <div class="feature-content">
+                <h3 class="section-title">Play Instantly, No Downloads No Installs.</h3>
+                <p class="section-description">Play games online for free without downloading. Just click the Play
+                    button and play instantly in your browser.</p>
             </div>
-        </div>
-    </section>
-    <!-- Feature Section -->
-    <section class="feature-section">
-        <div class="feature-content">
-            <h3 class="section-title">Play Instantly,
-                No Downloads
-                No Installs.</h3>
-            <p class="section-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
-        </div>
-        <div class="featured-game">
-            <img src="./images/Rectangle 55.png" alt="">
-            <div class="img-card">
-                <img src="" alt="">
+            <div class="featured-game">
+                <img src="./images/Rectangle 55.png" alt="">
+                <div class="img-card">
+                    <img src="./images/Rectangle 66.png" alt="">
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
     </main>
     <footer>
