featured section design updated

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- Feature Section -->
         <section class="feature-section section-width">
             <div class="feature-content">
-                <h3 class="section-title">Play Instantly, No Downloads No Installs.</h3>
+                <h3 class="section-title"><span class="linear-pink">Play Instantly,</span> No Downloads No Installs.</h3>
                 <p class="section-description">Play games online for free without downloading. Just click the Play
                     button and play instantly in your browser.</p>
             </div>
