--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         <!-- Feature Section -->
         <section class="feature-section section-width">
             <div class="feature-content">
-                <h3 class="section-title"><span class="linear-pink">Play Instantly,</span> No Downloads No Installs.</h3>
+                <h3 class="section-title"><span class="linear-pink">Play Instantly,</span> No Downloads No Installs.
+                </h3>
                 <p class="section-description">Play games online for free without downloading. Just click the Play
                     button and play instantly in your browser.</p>
             </div>
@@ -121,7 +122,50 @@
                 </div>
             </div>
         </section>
+        <!-- Feature section End -->
 
+        <!-- Games Section Start -->
+
+        <section class="games">
+            <div class="games-container">
+                <div class="div">
+                    <img src="./images/Rectangle 11.png" alt="" class="game-icon">
+                    <p class="game-info">Action Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 12.png" alt="" class="game-icon">
+                    <p class="game-info">Adventure Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 13.png" alt="" class="game-icon">
+                    <p class="game-info">Arcade Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 14.png" alt="" class="game-icon">
+                    <p class="game-info">Educational Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 15.png" alt="" class="game-icon">
+                    <p class="game-info">Word Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 16.png" alt="" class="game-icon">
+                    <p class="game-info">Role Palying Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 17.png" alt="" class="game-icon">
+                    <p class="game-info">Music & Audio Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 18.png" alt="" class="game-icon">
+                    <p class="game-info">Puzzle Games</p>
+                </div>
+                <div class="div">
+                    <img src="./images/Rectangle 19.png" alt="" class="game-icon">
+                    <p class="game-info">Strategy Games</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
