--- a/index.html
+++ b/index.html
@@ -126,44 +126,50 @@
 
         <!-- Games Section Start -->
 
-        <section class="games">
+        <section class="games section-width">
             <div class="games-container">
-                <div class="div">
-                    <img src="./images/Rectangle 11.png" alt="" class="game-icon">
-                    <p class="game-info">Action Games</p>
+                <div class="first-row">
+                    <div class="game-type">
+                        <img src="./images/Rectangle 11.png" alt="" class="game-icon">
+                        <p class="game-info">Action Games</p>
+                    </div>
+                    <div class="game-type">
+                        <img src="./images/Rectangle 12.png" alt="" class="game-icon">
+                        <p class="game-info">Adventure Games</p>
+                    </div>
+                    <div class="game-type">
+                        <img src="./images/Rectangle 13.png" alt="" class="game-icon">
+                        <p class="game-info">Arcade Games</p>
+                    </div>
+                    <div class="game-type">
+                        <img src="./images/Rectangle 14.png" alt="" class="game-icon">
+                        <p class="game-info">Educational Games</p>
+                    </div>
+                    <div class="game-type">
+                        <img src="./images/Rectangle 15.png" alt="" class="game-icon">
+                        <p class="game-info">Word Games</p>
+                    </div>
+                    
                 </div>
-                <div class="div">
-                    <img src="./images/Rectangle 12.png" alt="" class="game-icon">
-                    <p class="game-info">Adventure Games</p>
+                <div class="second-row">
+                    <div class="game-type">
+                        <img src="./images/Rectangle 16.png" alt="" class="game-icon">
+                        <p class="game-info">Role Palying Games</p>
+                    </div>
+                    <div class="game-type">
+                        <img src="./images/Rectangle 17.png" alt="" class="game-icon">
+                        <p class="game-info">Music & Audio Games</p>
+                    </div>
+                    <div class="game-type">
+                        <img src="./images/Rectangle 18.png" alt="" class="game-icon">
+                        <p class="game-info">Puzzle Games</p>
+                    </div>
+                    <div class="game-type">
+                        <img src="./images/Rectangle 19.png" alt="" class="game-icon">
+                        <p class="game-info">Strategy Games</p>
+                    </div>
                 </div>
-                <div class="div">
-                    <img src="./images/Rectangle 13.png" alt="" class="game-icon">
-                    <p class="game-info">Arcade Games</p>
-                </div>
-                <div class="div">
-                    <img src="./images/Rectangle 14.png" alt="" class="game-icon">
-                    <p class="game-info">Educational Games</p>
-                </div>
-                <div class="div">
-                    <img src="./images/Rectangle 15.png" alt="" class="game-icon">
-                    <p class="game-info">Word Games</p>
-                </div>
-                <div class="div">
-                    <img src="./images/Rectangle 16.png" alt="" class="game-icon">
-                    <p class="game-info">Role Palying Games</p>
-                </div>
-                <div class="div">
-                    <img src="./images/Rectangle 17.png" alt="" class="game-icon">
-                    <p class="game-info">Music & Audio Games</p>
-                </div>
-                <div class="div">
-                    <img src="./images/Rectangle 18.png" alt="" class="game-icon">
-                    <p class="game-info">Puzzle Games</p>
-                </div>
-                <div class="div">
-                    <img src="./images/Rectangle 19.png" alt="" class="game-icon">
-                    <p class="game-info">Strategy Games</p>
-                </div>
+                
             </div>
         </section>
     </main>
