--- a/index.html
+++ b/index.html
@@ -172,9 +172,43 @@
                 
             </div>
         </section>
+        <!-- Games Section End -->
     </main>
+    <!-- Footer Section Start -->
     <footer>
-
+        <div class="logo-container">
+            <img src="./images/Frame.png" alt="">
+            <h3><span>G</span>amer</h3>
+        </div>
+        <div class="footer-nav">
+            <ul>
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+        </div>
+        <div class="social-icons">
+            <span><a href=""><i class="fa-brands fa-twitter"></i></a></span>
+            <span><a href=""><i class="fa-brands fa-facebook-f"></i></a></span>
+            <span><a href=""><i class="fa-brands fa-square-youtube"></i></a></span>
+            <span><a href=""><i class="fa-brands fa-linkedin-in"></i></a></span>
+            <span><a href=""><i class="fa-brands fa-instagram"></i></a></span>
+            <span><a href=""></a><i class="fa-brands fa-apple"></i></span>
+        </div>
+        <div class="information">
+            <ul>
+                <li>Terms and Conditions</li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li>Privacy Settings</li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
     </footer>
 </body>
 
