--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 </ul>
                 <div class="follow-box">
                     <p>Follow Us On</p>
-                    <a href=""><i class="fa-brands fa-youtube"></i></a>
-                    <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                    <a href=""><i id="youtube" class="fa-brands fa-youtube"></i></a>
+                    <a href=""><i id="tiktok" class="fa-brands fa-tiktok"></i></a>
 
                 </div>
             </div>
@@ -175,10 +175,10 @@
         <!-- Games Section End -->
     </main>
     <!-- Footer Section Start -->
-    <footer>
+    <footer class="footer-section">
         <div class="logo-container">
             <img src="./images/Frame.png" alt="">
-            <h3><span>G</span>amer</h3>
+            <h3><span class="pink">G</span>amer</h3>
         </div>
         <div class="footer-nav">
             <ul>
@@ -191,12 +191,12 @@
             </ul>
         </div>
         <div class="social-icons">
-            <span><a href=""><i class="fa-brands fa-twitter"></i></a></span>
-            <span><a href=""><i class="fa-brands fa-facebook-f"></i></a></span>
-            <span><a href=""><i class="fa-brands fa-square-youtube"></i></a></span>
-            <span><a href=""><i class="fa-brands fa-linkedin-in"></i></a></span>
-            <span><a href=""><i class="fa-brands fa-instagram"></i></a></span>
-            <span><a href=""></a><i class="fa-brands fa-apple"></i></span>
+            <span><a href=""><i id="twitter" class="fa-brands fa-twitter"></i></a></span>
+            <span><a href=""><i id="facebook" class="fa-brands fa-facebook-f"></i></a></span>
+            <span><a href=""><i id="youtube-2" class="fa-brands fa-youtube"></i></a></span>
+            <span><a href=""><i id="linkedin" class="fa-brands fa-linkedin-in"></i></a></span>
+            <span><a href=""><i id="instagram" class="fa-brands fa-instagram"></i></a></span>
+            <span><a href=""><i id="apple" class="fa-brands fa-apple"></i></a></span>
         </div>
         <div class="information">
             <ul>
