gamers section added and designed

--- a/index.html
+++ b/index.html
@@ -69,17 +69,22 @@
         </section>
         <!-- Banner Section End -->
 
-        <!-- Gamers Section
-    <seciton class="gamers-section">
+        <!-- Gamers Section Start -->
+    <seciton class="gamers-section section-width">
         <div class="gamers-image">
-
+            <img src="./images/pngwing 4.png" alt="">
         </div>
         <div class="gamers-content">
-            <h3>We are gamer</h3>
-            <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
-            <button class="primary-btn">know more</button>
+            <h3 class="linear-text">We are gamer</h3>
+            <p class="section-description">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+            <button class="primary-btn btn-one">know more</button>
+            <div class="goals">
+                <strong>Our purpose...</strong>
+                <h6><blockquote>“unleash the gamer in everyone”</blockquote></h6>
+            </div>
+            
         </div>
-    </seciton> -->
+    </seciton>
 
         <!-- Game-Video Section Start-->
 
@@ -210,6 +215,7 @@
             <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
         </div>
     </footer>
+    <!-- Footer End -->
 </body>
 
 </html>
