--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image" href="./images/Frame.png">
     <title>The Gamer Zone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,10 +48,10 @@
                     <h3>Play Like The</h3>
                     <h2>G.O.A.T.</h2>
                     <ul class="banner-items">
-                        <li><i class="fa-regular fa-circle-play"></i>
+                        <li><i id="circle" class="fa-regular fa-circle-play"></i>
                             <p>1-Click instant play</p>
                         </li>
-                        <li><i class="fa-solid fa-download"></i>
+                        <li><i id="download-icon" class="fa-solid fa-download"></i>
                             <p>No Download</p>
                         </li>
                         <li><i class="fa-solid fa-user-group"></i>
