feature section responsive

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Banner Section End -->
 
         <!-- Gamers Section Start -->
-    <seciton class="gamers-section section-width">
+    <seciton class="gamers-section section-width hide">
         <div class="gamers-image">
             <img src="./images/pngwing 4.png" alt="">
         </div>
@@ -162,7 +162,7 @@
             </div>
         </section>
         <!-- Feature Section -->
-        <section class="feature-section section-width hide">
+        <section class="feature-section section-width">
             <div class="feature-content">
                 <h3 class="section-title"><span class="linear-pink">Play Instantly,</span> No Downloads No Installs.
                 </h3>
