games section responsive for mobile

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </section>
         <!-- Feature Section -->
-        <section class="feature-section section-width">
+        <section class="feature-section section-width hide">
             <div class="feature-content">
                 <h3 class="section-title"><span class="linear-pink">Play Instantly,</span> No Downloads No Installs.
                 </h3>
@@ -180,7 +180,7 @@
 
         <!-- Games Section Start -->
 
-        <section class="games section-width hide">
+        <section class="games section-width">
             <div class="games-container">
                 
                     <div class="game-type">
