--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header Section Start -->
     <header>
         <!-- NavBar Start -->
-        <nav class="hide">
+        <nav>
             <div class="nav-left">
                 <img src="./images/Frame.png" alt="">
                 <h3><span class="pink">G</span>amer</h3>
@@ -42,7 +42,7 @@
 
     <main>
         <!-- Banner Secion Start -->
-        <section class="banner-section hide">
+        <section class="banner-section ">
             <div class="banner-content">
                 <div class="banner-info">
                     <h3>Play Like The</h3>
@@ -71,7 +71,7 @@
         <!-- Banner Section End -->
 
         <!-- Gamers Section Start -->
-    <seciton class="gamers-section section-width hide">
+    <seciton class="gamers-section section-width ">
         <div class="gamers-image">
             <img src="./images/pngwing 4.png" alt="">
         </div>
@@ -89,7 +89,7 @@
 
         <!-- Game-Video Section Start-->
 
-        <section class="game-video-section hide">
+        <section class="game-video-section">
             <div class="game-video-container">
                 <h3 class="section-title">Online Games <span class="linear-text">Funny Videos</span></h3>
                 <p class="section-description">A Collection of Hilarious Videos to Brighten Your Day</p>
@@ -162,7 +162,7 @@
             </div>
         </section>
         <!-- Feature Section -->
-        <section class="feature-section section-width hide">
+        <section class="feature-section section-width">
             <div class="feature-content">
                 <h3 class="section-title"><span class="linear-pink">Play Instantly,</span> No Downloads No Installs.
                 </h3>
@@ -226,7 +226,7 @@
         <!-- Games Section End -->
     </main>
     <!-- Footer Section Start -->
-    <footer class="footer-section hide">
+    <footer class="footer-section">
         <div class="logo-container">
             <img src="./images/Frame.png" alt="">
             <h3><span class="pink">G</span>amer</h3>
